# Plugin-InteractiveMCPT

./: ACGMathAddon.hh  BRDF.cc  BRDF.hh  CMakeLists.txt  ImageViewer.cc  ImageViewer.hh  InfoStructs.hh  InteractiveDrawing.cc  InteractiveDrawing.hh  InteractiveMCPT_.cc  InteractiveMCPT_.hh  MonteCuda.cc  MonteCuda.hh  RenderTarget.cc  RenderTarget.hh  Sampling.cc  Sampling.hh  Sampling.ipynb  Smoothing.cc  Smoothing.hh
Cuda/: BRDF.hh  Geometry.hh  KdTree.hh  MonteCuda.cu  Sampling.hh
scenes/atrium/: bunny.off  floor01.off  floor02.off  light.off  light2.off  scene.ini  scene.off
scenes/awesomeshack/: awesomeshack.ini  shack.3ds  shack.blend  shack.blend1
scenes/chess/: Dodecahedron 10.off  black_fields.mtl  blood.off  chess.ini  chess_blood.ini  pawns.blend  pawns.blend1  white_pawn.mtl
scenes/office/: BigassHeizung.off  Glas.off  Heizung.off  Material11.off  Material17.off  Room Light.lgt  Saeulen.off  Teppich.off  TischBeine.off  Tische.off  Wall.off  office.ini  office_with_bigass_heater.ini  spherelight.off
scenes/radiobox800/: bunny_3k.off  glossy.ini  light.off  red.off  scene.ini  scene_with_bunny.ini  wall.off  yellow.off
scenes/yab/: back.mtl  yab.blend  yab.blend1  yab.ini
